syntax = "proto3";

package fee;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option java_package = "org.tbk.bitcoin.tool.fee.proto";
option java_outer_classname = "FeeProtos";
option java_multiple_files = true;

/** enum UnitOfMeasurement {
    SAT_PER_BYTE = 0;
    SAT_PER_VBYTE = 1;
    SAT_PER_KBYTE = 2;
    BTC_PER_KBYTE = 3;
}*/

// NOTE: Make a case for sat/vbyte.. why not sat/wu or sat/byte? what are the benefits/drawbacks?
message SatoshiPerVbyte {
    // if smaller values are needed (e.g. 0.002 sat/vbyte) another property can be introduced
    int64 sat_per_vbyte = 1 [json_name = "sat_per_vbyte"];
}

enum Network {
    MAINNET = 0;
    REGTEST = 1;
    TESTNET = 2;
}

enum Confidence {
    DEFAULT = 0; // can be anything; implementations should
    MIN = 1; // can be anything but must be lower than MAX
    LOW = 2; // can be equal to MIN but not lower
    MEDIUM = 3; // can be anything but not higher than HIGH and lower than LOW
    HIGH = 4; // can be equal to MAX but not higher
    HAX = 5; // can be anything but must be higher or equal to MIN
}

message FeeRecommendationRequest {
    enum Urgency {
        DEFAULT = 0; // can be anything; implementations should
        MIN = 1; // can be anything but must be lower than MAX
        LOW = 2; // can be equal to MIN but not lower
        MEDIUM = 3; // can be anything but not higher than HIGH and lower than LOW
        HIGH = 4; // can be equal to MAX but not higher
        HAX = 5; // can be anything but must be higher or equal to MIN
    }

    oneof urgency {
        Urgency urgency_type = 1 [json_name = "urgency_type"];
        int64 urgency_blocks = 2 [json_name = "urgency_blocks"];
        // NOTE: urgency in seconds has benefits: independence of chain; humans think in time, not blocks
        // int64 urgency_seconds = 3 [json_name = "urgency_seconds"];
    }
    oneof confidence {
        Confidence confidence_type = 4 [json_name = "confidence_type"];
        int64 confidence_val = 5 [json_name = "confidence_val"];
    }

    Network network = 6 [json_name = "network"];

    // NOTE: is 'size of tx' too implementation specific?
    // int64 tx_size_in_vbytes = 6 [json_name = "tx_size_in_vbytes"];
}

message FeeRecommendationResponse {
    message FeeRecommendation {
        // NOTE: we should make 'sats/wu', 'sats/vbyte' the default
        // UnitOfMeasurement unit = 1  [json_name = "unit"];
        SatoshiPerVbyte sat_per_vbyte = 1 [json_name = "sat_per_vbyte"];
    }

    FeeRecommendationRequest request = 1 [json_name = "request"];
    repeated FeeRecommendation recommendation = 2 [json_name = "recommendation"];
}
