syntax = "proto3";

package example.fee.internal.api;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option java_package = "org.tbk.bitcoin.fee.example.internal.api.proto";
option java_outer_classname = "FeeTableApiProtos";
option java_multiple_files = true;


message FeeTableResponse {
    message Column {
        double value = 1 [json_name = "value"];
        string text = 2 [json_name = "text"];
    }

    message Row {
        message RowHeader {
            double value = 1 [json_name = "value"];
            string text = 2 [json_name = "text"];
        }
        message RowEntry {
            double value = 1 [json_name = "value"];
            string text = 2 [json_name = "text"];

            repeated FeeRecommendation fee_recommendation = 3 [json_name = "fee_recommendations"];
        }

        RowHeader header = 1 [json_name = "header"];
        repeated RowEntry entry = 2 [json_name = "entries"];
    }

    repeated Column column = 1 [json_name = "columns"];
    repeated Row row = 2 [json_name = "rows"];
}

message FeeRecommendation {
    double value = 1 [json_name = "value"];
    string provider_name = 2 [json_name = "provider_name"];
}
